# backend/docs/openapi.yaml
@@ -305,15 +305,19 @@ paths:
                   - data
               example:
                 data:
-                  top_queries:
-                    - person_id: 1
-                      count: 42
-                      percentage: 35.0
+                  top_search_queries:
+                    - search_type: people
+                      query: luke
+                      count: 20
+                      percentage: 40.0
                   average_response_time_ms: 150.25
                   popular_hours:
-                    "0": 5
-                    "1": 3
-                    "14": 28
+                    - hour: 0
+                      total_count: 5
+                    - hour: 1
+                      total_count: 3
+                    - hour: 14
+                      total_count: 28
                   total_queries: 120
                   computed_at: "2026-01-15T10:30:00+00:00"
 
@@ -472,9 +476,6 @@ components:
       type: object
       description: Aggregated query analytics
       properties:
-        top_queries:
-          type: array
-          description: Top 5 most queried person IDs
           items:
             type: object
             properties:
@@ -489,24 +490,56 @@ components:
               - person_id
               - count
               - percentage
+        top_search_queries:
+          type: array
+          description: Top 5 most searched queries (people/films)
+          items:
+            type: object
+            properties:
+              search_type:
+                type: string
+                example: people
+              query:
+                type: string
+                example: luke
+              count:
+                type: integer
+              percentage:
+                type: number
+                format: float
+            required:
+              - search_type
+              - query
+              - count
+              - percentage
         average_response_time_ms:
           type: number
           format: float
-          description: Average SWAPI response time in milliseconds
+          description: Average SWAPI response time in milliseconds (detail + search)
         popular_hours:
-          type: object
-          description: "Map of hour (0-23) to query count"
-          additionalProperties:
-            type: integer
+          type: array
+          description: Request count by hour (0-23), all endpoint requests
+          items:
+            type: object
+            properties:
+              hour:
+                type: integer
+                minimum: 0
+                maximum: 23
+              total_count:
+                type: integer
+            required:
+              - hour
+              - total_count
         total_queries:
           type: integer
-          description: Total number of detail queries recorded
+          description: Total number of requests (detail + search)
         computed_at:
           type: string
           format: date-time
           description: When these statistics were last computed
       required:
-        - top_queries
+        - top_search_queries
         - average_response_time_ms
         - popular_hours
         - total_queries
